Fixed loading/reloading of Proxy Exception List.
Summary:
  - Changed the list 'ignored-host-list' in the proxy tab to autoExpands.
  - Removed an then unnecessary redraw() of this list.

Details:
The Proxy Exception List did not correctly show the entries, because there was
not redraw() call to the list after the Proxy-Tab was displayed and all previous
calls to redraw() were useless as the list was invisible and had clientHeight ==
0. The exception list was set to be not auto-expanding, thus List.redraw()
removed all list elements from the DOM except one if clientHeight == 0. Changing
autoExpands to true fixes this problem.

TBR=glotov@chromium.org
BUG=chromium:140014,chromium-os:32568
TEST=
1. Configure a proxy, add hosts "A", "B", "C" to the list (the list should have three entries now).
2. Close the dialog.
3. Reopen the dialog.
4. The list should show the three entries.


Review URL: https://chromiumcodereview.appspot.com/10828281

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@152546 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 2ec1a33815d65ef823d0bc412005b6aed9ef9d03

--- a/chrome/browser/resources/options/chromeos/internet_detail.css
+++ b/chrome/browser/resources/options/chromeos/internet_detail.css
@@ -45,7 +45,6 @@
 #ignored-host-list {
   -webkit-margin-start: 0;
   border: solid 1px #999;
-  max-height: 128px;
   min-height: 64px;
   width: 400px;
 }
